--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>abc</title>
 </head>
-<body>lala
-baby's gettin' tired
-<h1>我就想试试h1是什么标题
+<body>
+<h1>我就想试试h1是什么标题</h1>
+<img src="imges/1721115965.jpg"/>
+
 </body>
 
 </html>
