--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>tingting
+<head>
     <meta charset="UTF-8">
     <title>abc</title>
+  <style>
+    body{
+      background-image: url("1.jpg");
+    background-color: black;
+    }
+    h1{
+      color: white;
+    }
 </head>
 <body>
 <h1>我就想试试h1是什么标题</h1>
-<img src="images/1.jpg"/>
-
+<p>我希望能看到图片</p>
+    
 </body>
-
 </html>
