--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>abc</title>
   <style>
     body{
-      background-image: url("images/1.jpg");
+      background-image: url("1.jpg");
     background-color: black;
+      background-size: 100%;
     }
     h1{
       color: white;
@@ -15,6 +16,6 @@
 <body>
 <h1>我就想试试h1是什么标题</h1>
 <p>我希望能看到图片</p>
-    
+
 </body>
 </html>
