--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body{
       background-image: url("images/1.jpg");
-      background-size: 100%;
+      background-size: 100% 100%;
     }
     h1{
       color: white;
