--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <title>abc</title>
   <style>
     body{
-      background-image: url('images/1.jpg');
+      background-image: url('1.jpg');
+      background-size: 100% 100%;
     }
-    h1{
+    h1,p{
       color: white;
     }
     </style>
 </head>
-<body>
+<body onclick="gogogo()">
 <h1>我就想试试h1是什么标题</h1>
 <p>我希望能看到图片</p>
 
 </body>
+<script>
+  function gogogo(){
+    alert('我的照片为什么这么模糊')
+  }
 </html>
