--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <style>
     body{
       background-image: url('1.jpg');
-      background-size: 100% 100%;
+      background-size: 50% 50%;
+      background-repeat: no-repeat;
     }
     h1,p{
       color: white;
