--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>abc</title>
   <style>
     body{
-      background-image: url('1.jpg');
+      background-image: url('images/1.jpg');
       background-size: 50% 50%;
       background-repeat: no-repeat;
     }
