--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <style>
     body{
       background-image: url('images/1.jpg');
+      background-size: 10% 10%;
       background-repeat: no-repeat;
     }
     h1,p{
@@ -22,5 +23,5 @@
   function gogogo(){
     alert('我的照片为什么这么模糊');
   }
-</script>
+  </script>
 </html>
