--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body{
       background-image: url('images/1.jpg');
-      background-size: 100% 900%;
+      background-size: 100% 1000%;
       background-repeat: no-repeat;
     }
     h1,p{
@@ -20,8 +20,10 @@
 
 </body>
 <script>
+  var number = 0;
   function gogogo(){
-    alert('我的照片为什么这么模糊');
+    alert('number='+number);
+    number = number+1;
   }
   </script>
 </html>
