--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script>
   var number = 0;
   function gogogo(){
+    if(number=%7);'pass';
     alert('number='+number);
     number = number+1;
   }
