--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     }
     body{
       color: white;
+      font-size: 100px;
     }
     </style>
 </head>
 <body onclick="gogogo()">
 今天陆包包是什么样子的？
-她有
+<p>她有</p>
 <span id="mynumber">1</span>
 点点愚蠢
 </body>
