--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     </style>
 </head>
-<body onclick="gogogo()">
+<body ontouch="gogogo()">
 今天陆包包是什么样子的？
 <p>她有</p>
 <span id="mynumber">1</span>
