--- a/10010.html
+++ b/10010.html
@@ -10,7 +10,7 @@
         #janny{
             width:100px;
             height:100px;
-            background: url("音符.gif");
+            background: url("images/音符.gif");
             position:fixed;
             top:0;
             left:0;
