--- a/rotary.html
+++ b/rotary.html
@@ -10,7 +10,7 @@
         #janny{
             width:100px;
             height:100px;
-            background: url("images/音符.gif");
+            background: url("音符.gif");
             position:fixed;
             top:0;
             left:0;
@@ -24,8 +24,7 @@
 wonderful
     wonderful
     wonderful
-    wonderful
-    wonderful
+    wonderfulwonderful
     wonderful
     wonderful
     wonderful
@@ -37,4 +36,10 @@ wonderful
 
 </p>
 </body>
+<script>
+    var audio=document.createElement("audio");
+    audio.src="bgm.mp3";
+    audio.play();
+    audio.loop="loop";
+</script>
 </html>
