--- a/rotary.html
+++ b/rotary.html
@@ -11,6 +11,7 @@
             width:100px;
             height:100px;
             background: url("images/音符.gif");
+            background-image: url('images/rotary.jpg');
             position:fixed;
             top:0;
             left:0;
