--- a/rotary.html
+++ b/rotary.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        body{
+             background-image: url('images/rotary.jpg');
+        }
         p{
             font-size:200px;
         }
@@ -11,7 +14,6 @@
             width:100px;
             height:100px;
             background: url("images/音符.gif");
-            background-image: url('images/rotary.jpg');
             position:fixed;
             top:0;
             left:0;
