--- a/rotary.html
+++ b/rotary.html
@@ -27,7 +27,8 @@
 wonderful
     wonderful
     wonderful
-    wonderfulwonderful
+    wonderful
+    wonderful
     wonderful
     wonderful
     wonderful
