--- a/rotary.html
+++ b/rotary.html
@@ -58,6 +58,7 @@
             audio.play();
             document.getElementById("janny").style.backgroundImage="url('images/音符.gif')"
         }
+        isplaying=!isplaying;
     }
 </script>
 </html>
