--- a/piggy.html
+++ b/piggy.html
@@ -7,7 +7,7 @@
         #stage{
             height:400px;
             width:550px;
-            background-image:url("stageSelect/images/rainy.gif");
+            background-image:url("images/rainy.gif");
         }
         #rain,#storm,#blizzard{
             width:100px;
@@ -30,13 +30,13 @@
 </body>
 <script>
    function rainy(){
-       document.getElementById("stage").style.backgroundImage="url('stageSelect/images/rainy.gif')";
+       document.getElementById("stage").style.backgroundImage="url('images/rainy.gif')";
    }
    function storm(){
-       document.getElementById("stage").style.backgroundImage="url('stageSelect/images/storm.gif')";
+       document.getElementById("stage").style.backgroundImage="url('images/storm.gif')";
    }
    function blizzard(){
-       document.getElementById("stage").style.backgroundImage="url('stageSelect/images/blizzard.gif')";
+       document.getElementById("stage").style.backgroundImage="url('images/blizzard.gif')";
    }
 </script>
 </html>
